monitoring/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
  name: monitoring
    pod-security.kubernetes.io/enforce: privileged
